--- a/index.html
+++ b/index.html
@@ -1,17 +1,63 @@
-<!DOCTYPE html>
 <html>
 	<head>
-		<meta charset=utf-8>
-		<title>My first three.js app</title>
+		<title>three.js test app</title>
 		<style>
 			body { margin: 0; }
-			canvas { width: 100%; height: 100% }
+			 canvas {
+				width: 100vw;
+				height: 100vh;
+				display: block;
+				position: fixed;
+				background-color: white;
+				top: 0;
+				left: 0;
+				z-index: -9999;
+			}
 		</style>
+    <link rel="stylesheet" type="text/css" href="main.css">
 	</head>
 	<body>
+    <div id="info">Testing in progress...</div>
 		<script src="js/three.js"></script>
 		<script>
-			// Our Javascript will go here.
+			var scene = new THREE.Scene();
+			var camera = new THREE.PerspectiveCamera( 75, window.innerWidth/window.innerHeight, 0.1, 1000 ); // field of view, aspect ratio, near and far clipping panes
+
+			var renderer = new THREE.WebGLRenderer();
+			renderer.setSize( window.innerWidth, window.innerHeight );
+			document.body.appendChild( renderer.domElement );
+
+			var geometry = new THREE.BoxGeometry( 2, 2, 1 ); // x, y, z
+			var material = new THREE.MeshLambertMaterial ( { color: 'pink' } );
+			var cube = new THREE.Mesh( geometry, material );
+      var cube2 = new THREE.Mesh( geometry, material )
+      cube2.position.y = 5
+			scene.add( cube );
+
+			camera.position.z = 7; // move camera away from origin so they're not on top of each other
+
+			// create a point light
+			const pointLight =
+				new THREE.PointLight('white', 1); // color, intensity, distance, decay
+
+			// set its position
+			pointLight.position.x = 10;
+			pointLight.position.y = 50;
+			pointLight.position.z = 130;
+
+			// add to the scene
+			scene.add(pointLight);
+
+			var render = function () {
+				requestAnimationFrame( render );
+
+				// cube.rotation.x += 0.025;
+				cube.rotation.y += 0.025;
+				renderer.setClearColor( 'lightgrey', 1.0 );
+				renderer.render(scene, camera);
+			};
+
+			render();
 		</script>
 	</body>
 </html>
